responsive_styling_mobile_update

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -4,10 +4,11 @@
 
   --primary-color: #cbea7b;
   --secondary-color: #1a3129;
-  --font-color: #4c4c4d;
+  --font-color-grey: #4c4c4d;
+  --font-color-green: #356554;
   --bg-color: #fafdf2;
   --box-bg-color: #f6fbe9;
-  --box-border-color: #f6fbe9;
+  --box-border-color: #e5f5bd;
   --contact-bg-color: #234338;
   --contact-border-color: #2c5446;
 }
@@ -24,11 +25,71 @@
 }
 
 body {
-  border: 1px solid red;
   max-width: 100vw;
-  min-width: 100vw;
   background-color: var(--bg-color);
-  color: var(--font-color);
+  color: var(--font-color-grey);
+}
+
+h1,
+h2,
+h3 {
+  color: var(--secondary-color);
+}
+
+h1,
+h2 {
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+p {
+  line-height: 1.5rem;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+button {
+  font-family: "Urbanist-Variable";
+  font-size: 1rem;
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  font-weight: 500;
+  border: 0.1rem solid var(--primary-color);
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
+  cursor: pointer;
+}
+
+.wrapper_hero_sidetext,
+.section_features,
+.section_calculator,
+footer {
+  padding: 0 1rem;
+}
+
+.div_herotext,
+.div_intro {
+  text-align: center;
+}
+
+.div_intro {
+  margin-bottom: 2rem;
 }
 
 /* * ------------------- Header ------------------ */
@@ -44,9 +105,9 @@ header {
   border: 0.1rem solid var(--contact-border-color);
   border-radius: 0.5rem;
   padding: 0.5rem;
-  margin: 1rem;
   display: flex;
   justify-content: space-between;
+  font-size: 0.7rem;
 }
 
 .section_navbar {
@@ -87,43 +148,115 @@ header {
 /* * ------------------- Section Hero ------------------ */
 
 .div_hero_image {
-  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+.div_hero_image img {
+  width: 100%;
+  object-fit: cover;
 }
 
 .div_customers {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5rem;
+  gap: 0.5rem;
+  margin-top: -2rem;
+}
+
+.div_customers p {
+  color: var(--secondary-color);
+  font-weight: 500;
+}
+
+.div_customers span {
+  color: var(--font-color-green);
 }
 
 .wrapper_costumers_img {
   display: flex;
   justify-content: center;
-  position: relative;
+  background-color: var(--bg-color);
+  border: 0.1rem solid var(--primary-color);
+  border-radius: 4rem;
+  padding: 0.5rem;
 }
 
 .wrapper_costumers_img img {
-  position: absolute;
-  width: 4rem;
+  width: 3rem;
 }
 
 .wrapper_costumers_img img:first-of-type {
-  top: 0;
-  left: -4.2rem;
-  z-index: 1;
-}
-
-.wrapper_costumers_img img:nth-of-type(2) {
-  top: 0;
-  left: -1.5rem;
-  z-index: 2;
+  margin-right: -1.5rem;
 }
 
 .wrapper_costumers_img img:last-of-type {
-  top: 0;
-  left: 1.4rem;
-  z-index: 3;
+  margin-left: -1.5rem;
+}
+
+.div_herotext h3 {
+  font-weight: 500;
+  text-align: center;
+  border-bottom: 0.25rem solid var(--primary-color);
+  padding: 0.2rem;
+  margin: 2rem auto;
+  width: 16rem;
+}
+
+/*  --------- CTA-Buttons  --------- */
+
+.div_hero_bts {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  margin: 2rem 0 3rem;
+}
+
+.div_hero_bts a {
+  color: var(--secondary-color);
+  font-weight: 500;
+  border: 0.1rem solid var(--primary-color);
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
+  cursor: pointer;
+}
+
+.div_hero_bts a:first-of-type {
+  background-color: var(--primary-color);
+}
+
+/* * ------------------- Section Features ------------------ */
+
+.section_features {
+  margin-bottom: 3rem;
+}
+
+.box_features {
+  border: 0.1rem solid var(--box-border-color);
+  border-radius: 0.5rem;
+  background-color: var(--box-bg-color);
+  padding: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.box_features img {
+  background-color: var(--primary-color);
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+  width: 3rem;
+  height: 3rem;
+}
+
+.box_features h3 {
+  font-weight: 600;
+}
+
+.wrapper_box_icon {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 /* * ------------------- Section Calculator ------------------ */
@@ -134,17 +267,69 @@ header {
   padding: 1rem;
 }
 
+.calculator {
+  border: 0.1rem solid var(--box-border-color);
+  border-radius: 0.5rem;
+  background-color: var(--box-bg-color);
+  padding: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.calculator button {
+  width: 100%;
+}
+
 .box_input input,
 .box_input select {
   width: 100%;
   padding: 1rem;
-  margin-bottom: 2.3rem;
-  border-radius: 10px;
+  margin: 1rem 0 1.5rem 0;
+  border: 0.1rem solid var(--box-border-color);
+  border-radius: 0.5rem;
 }
 
-.box_input select {
-  max-width: 100%;
-  padding: 1rem;
+.box_input input:focus,
+.box_input select:focus {
+  outline: 0.1rem solid var(--font-color-green);
+}
+
+.wrapper_gender {
+  text-align: center;
+  margin: 1rem;
+}
+
+.wrapper_gender label:nth-child(2) {
+  margin: 1.5rem 0;
+}
+
+.wrapper_radio_bts {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-evenly;
+}
+
+.box_gender {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.wrapper_select {
+  position: relative;
+}
+
+.wrapper_select select {
+  appearance: none;
+  cursor: pointer;
+}
+
+.wrapper_select::after {
+  content: url("../img/icon_grey_arrow.svg");
+  position: absolute;
+  top: 35%;
+  right: 1rem;
+  transform: translate(-50%);
+  pointer-events: none;
 }
 
 /*  --------- Result Calculator --------- */
@@ -152,10 +337,9 @@ header {
 .div_calculator_result {
   display: none;
   margin-top: 2rem;
-  border: 2px solid #90ee90;
-  border-radius: 1rem;
-  padding: 1.5rem;
-  background-color: #f0fff0;
+  border: 0.1rem solid var(--box-border-color);
+  border-radius: 0.5rem;
+  background-color: white;
 }
 
 .result_header,
@@ -163,18 +347,16 @@ header {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 1rem 0.25rem;
   align-items: center;
+}
+.result_row:last-of-type {
+  padding-bottom: 1rem;
 }
 
 .result_header {
-  border-bottom: 2px solid #90ee90;
-  font-weight: bold;
+  border-bottom: 0.1rem solid var(--box-border-color);
   text-align: center;
-}
-
-.result_row {
-  border-bottom: 1px solid #d3d3d3;
 }
 
 .result_row:last-child {
@@ -183,11 +365,82 @@ header {
 
 .result_label {
   text-align: left;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .result_value {
   text-align: center;
-  font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1rem;
+}
+
+/* * ------------------- Footer ------------------ */
+
+/*  --------- Section Footer Nav --------- */
+
+footer {
+  background-color: var(--secondary-color);
+  color: white;
+  padding-bottom: 3rem;
+}
+
+.wrapper_logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0rem;
+}
+
+.div_go_topmenu {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.wrapper_circle {
+  display: flex;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  background-color: var(--contact-bg-color);
+  border-radius: 4rem;
+}
+
+.wrapper_circle a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper_circle img {
+  width: 0.75rem;
+}
+
+.section_footer_nav nav ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: start;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+/*  --------- Section Footer Contact --------- */
+
+.section_contact,
+.box_contact {
+  background-color: var(--contact-bg-color);
+  border: 0.1rem solid var(--contact-border-color);
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.box_contact {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.div_copyright {
+  text-align: center;
 }
