--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -71,7 +71,7 @@ button {
   background-color: var(--primary-color);
   font-weight: 500;
   border: 0.1rem solid var(--primary-color);
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   padding: 0.75rem 1rem;
   cursor: pointer;
 }
@@ -108,12 +108,12 @@ header {
   display: flex;
   justify-content: space-between;
   font-size: 0.7rem;
+  margin-bottom: 1.5rem;
 }
 
 .section_navbar {
   display: flex;
   justify-content: space-between;
-  margin: 1.8rem 1rem 0;
 }
 
 .section_navbar nav {
@@ -217,7 +217,7 @@ header {
   color: var(--secondary-color);
   font-weight: 500;
   border: 0.1rem solid var(--primary-color);
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
   padding: 0.75rem 1rem;
   cursor: pointer;
 }
