--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -106,9 +106,19 @@ header {
   border-radius: 0.5rem;
   padding: 0.5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   font-size: 0.7rem;
   margin-bottom: 1.5rem;
+}
+
+.wrapper_jointext {
+  display: flex;
+  justify-content: space-between;
+  gap: 0.75rem;
+}
+
+.wrapper_abstract_lines {
+  display: none;
 }
 
 .section_navbar {
