--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -159,7 +159,10 @@ header {
 
 .div_hero_image {
   max-width: 100vw;
+  max-height: 60vh;
   overflow: hidden;
+  border-bottom-right-radius: 2rem;
+  border-bottom-left-radius: 2rem;
 }
 
 .div_hero_image img {
@@ -281,7 +284,7 @@ header {
   border: 0.1rem solid var(--box-border-color);
   border-radius: 0.5rem;
   background-color: var(--box-bg-color);
-  padding: 2rem;
+  padding: 2rem 2rem 4rem;
   margin-bottom: 1.5rem;
 }
 
@@ -346,7 +349,7 @@ header {
 
 .div_calculator_result {
   display: none;
-  margin-top: 2rem;
+  margin-top: 3rem;
   border: 0.1rem solid var(--box-border-color);
   border-radius: 0.5rem;
   background-color: white;
