--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -67,4 +67,123 @@
   .burger_menu {
     display: none;
   }
+
+  /* * ------------------- Section Hero ------------------ */
+
+  .section_hero {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100vw;
+  }
+
+  .div_hero_image {
+    width: 100vw;
+    height: 120rem;
+    overflow: hidden;
+    margin-left: -1rem;
+    border-bottom-left-radius: 0rem;
+  }
+
+  .div_hero_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .div_herotext {
+    width: 50vw;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .div_herotext h1,
+  .div_herotext h3,
+  .div_herotext p {
+    align-items: start;
+    text-align: left;
+  }
+
+  .div_herotext h3 {
+    margin: 1.5rem 0;
+  }
+
+  .wrapper_hero_sidetext {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: start;
+    align-items: start;
+  }
+
+  .div_customers {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    margin-left: 1rem;
+  }
+
+  /* * ------------------- Section Features ------------------ */
+
+  .section_features {
+    margin: 5rem 0;
+  }
+
+  .div_features {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+
+  .box_features {
+    width: 43vw;
+    margin-bottom: 0;
+  }
+
+  /* * ------------------- Section Calculator ------------------ */
+
+  /*  --------- Form Calculator  --------- */
+
+  .calculator {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+
+  .wrapper_input {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+
+  .box_input input,
+  .box_input select {
+    width: 43vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  /*  --------- Result Calculator --------- */
+
+  .div_calculator_result,
+  .calculator button {
+    margin: 0 auto;
+  }
+
+  .div_calculator_result {
+    max-width: 60vw;
+  }
+
+  .calculator button {
+    max-width: 18rem;
+  }
+
+  /* * ------------------- Footer ------------------ */
+
+  /*  --------- Section Footer Nav --------- */
 }
